added two more sections with content

--- a/index.html
+++ b/index.html
@@ -23,22 +23,89 @@
       content="Front-end developer from South Carolina in the United States."
     />
     <link rel="stylesheet" href="styles/index.css" />
+    <script src="https://cdn.jsdelivr.net/npm/kute.js@2.2.4/dist/kute.min.js"></script>
   </head>
   <body>
     <div class="container">
       <header></header>
 
       <main>
-        <section class="grid grid-2-columns">
-          <div>
-            <h1>Hello I'm Brooklyn</h1>
-            <h1>
-              a
-              <span class="auto-type"></span>
-            </h1>
+        <section>
+          <div class="grid grid-2-columns">
+            <div>
+              <h1>Hello I'm Brooklyn</h1>
+              <h1>
+                a
+                <span class="auto-type"></span>
+              </h1>
+              <div class="btn">Contact Me</div>
+            </div>
+            <div><img src="/images/selfiee.jpg" class="header-img" /></div>
           </div>
-          <div>
-            <img src="" alt="" class="img-responsive" />
+        </section>
+        <section>
+          <h2>About Me</h2>
+          <div class="grid grid-2-columns">
+            <div>
+              <p>
+                Greetings and welcome to my portfolio site! As an avid gamer I
+                have honed my skills in the virtual realms; now I am channeling
+                that passion into crafting code and design that is not only
+                visually appealing but user-friendly. In the realm of web
+                development, just as in gaming, the mission is the same: strike
+                the perfect balance between aesthetics and user experience.
+              </p>
+              <p>
+                My portfolio is the result of countless hours of work and
+                dedication. It is also an open invitation to connect,
+                collaborate, and journey through the endliss possibilities of
+                the digital universe together. Thank you for choosing to play
+                alongside me, and let's create some extraordinary online
+                experiences together!
+              </p>
+            </div>
+            <div><img src="/images/selfie.png" /></div>
+          </div>
+        </section>
+        <section>
+          <h2>Projects</h2>
+          <div class="grid grid-3-columns grid-space">
+            <div>
+              <div class="blob-back-1">
+                <img src="/images/trip-pic.PNG" class="blob-1" />
+              </div>
+              <h3 class="text-center">Travel Site</h3>
+              <p class="text-center">
+                Completed with responsive HTML, CSS, and utilizes Google embeds.
+              </p>
+            </div>
+            <div>
+              <div class="blob-back-2">
+                <img src="/images/dog.PNG" class="blob-2" />
+              </div>
+              <h3 class="text-center">Book Site</h3>
+              <p class="text-center">Completed with responsive HTML and CSS.</p>
+            </div>
+            <div>
+              <div class="blob-back-3">
+                <img src="/images/clock.PNG" class="blob-3" />
+              </div>
+              <h3 class="text-center">Clock App</h3>
+              <p class="text-center">
+                Utilizes HTML, CSS, JS, API and Bootstrap.
+              </p>
+            </div>
+            <div>
+              <div class="blob-back-4">
+                <img src="/images/weather.PNG" class="blob-4" />
+              </div>
+              <h3 class="text-center">Weather App</h3>
+              <p class="text-center">
+                Utilizes HTML, CSS, JS, API and Bootstrap.
+              </p>
+            </div>
+            <div></div>
+            <div></div>
           </div>
         </section>
       </main>
@@ -46,7 +113,7 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
       var typed = new Typed(".auto-type", {
-        strings: ["Web Developer", "Youtuber", "Game Developer"],
+        strings: ["Web Developer", "Golfer", "Game Developer"],
         typeSpeed: 150,
         backSpeed: 150,
         loop: true,
