--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 finishing before the end of the year.
               </p>
               <p>Through this process I have gained experience with:</p>
-              <ul class="grid grid-2-columns">
+              <ul class="grid grid-2-columns exp">
                 <li>HTML</li>
                 <li>CSS</li>
                 <li>JS</li>
@@ -189,7 +189,7 @@
       </div>
     </footer>
     <div class="footer-bottom">
-      <p>This website was coded by Brooklyn Van Bebber</p>
+      <p class="name">This website was coded by Brooklyn Van Bebber</p>
     </div>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
