--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
           <div class="grid grid-4-columns grid-space projects">
             <div>
               <div class="blob-back-1">
-                <img src="/images/trip-pic.PNG" class="blob-1" />
+                <a
+                  href="https://seogwipo-southkorea.netlify.app/"
+                  target="_blank"
+                  ><img src="/images/trip-pic.PNG" class="blob-1"
+                /></a>
               </div>
               <h3 class="text-center">Travel Site</h3>
               <p class="text-center">
@@ -80,14 +84,24 @@
             </div>
             <div>
               <div class="blob-back-2">
-                <img src="/images/dog.PNG" class="blob-2" />
+                <a
+                  href="https://racing-in-the-rain.netlify.app/"
+                  target="_blank"
+                >
+                  <img src="/images/dog.PNG" class="blob-2"
+                /></a>
               </div>
               <h3 class="text-center">Book Site</h3>
               <p class="text-center">Completed with responsive HTML and CSS.</p>
             </div>
             <div>
               <div class="blob-back-3">
-                <img src="/images/clock.PNG" class="blob-3" />
+                <a
+                  href="https://www.shecodes.io/cohorts/shecodes-plus-add-on-28caceae-ab04-4d5b-b969-238bf796394b/projects/1784095"
+                  target="_blank"
+                >
+                  <img src="/images/clock.PNG" class="blob-3"
+                /></a>
               </div>
               <h3 class="text-center">Clock App</h3>
               <p class="text-center">
@@ -96,7 +110,12 @@
             </div>
             <div>
               <div class="blob-back-4">
-                <img src="/images/weather.PNG" class="blob-4" />
+                <a
+                  href="https://www.shecodes.io/cohorts/shecodes-plus-01d9d808-0686-415f-9eb3-1b582620f0d8/projects/1716174"
+                  target="_blank"
+                >
+                  <img src="/images/weather.PNG" class="blob-4"
+                /></a>
               </div>
               <h3 class="text-center">Weather App</h3>
               <p class="text-center">
@@ -114,16 +133,20 @@
               <span class="icons"
                 ><a
                   href="https://www.linkedin.com/in/brooklyn-van-bebber-6bb8a9242/"
+                  target="_blank"
                   ><i
                     class="fa-brands fa-linkedin fa-xl"
                     style="color: #79c2d0"
                   ></i></a
-                ><a href="https://github.com/ANurfHerder"
+                ><a href="https://github.com/ANurfHerder" target="_blank"
                   ><i
                     class="fa-brands fa-github fa-xl"
                     style="color: black"
                   ></i></a
-                ><a href="https://www.instagram.com/anurfherder/">
+                ><a
+                  href="https://www.instagram.com/anurfherder/"
+                  target="_blank"
+                >
                   <i
                     class="fa-brands fa-instagram fa-xl"
                     style="color: #ffb5b5"
@@ -171,13 +194,16 @@
     <footer>
       <div class="grid grid-1-column">
         <div class="footer-icons">
-          <a href="https://www.linkedin.com/in/brooklyn-van-bebber-6bb8a9242/">
+          <a
+            href="https://www.linkedin.com/in/brooklyn-van-bebber-6bb8a9242/"
+            target="_blank"
+          >
             <i class="fa-brands fa-linkedin fa-xl" style="color: #79c2d0"></i>
           </a>
-          <a href="https://github.com/ANurfHerder">
+          <a href="https://github.com/ANurfHerder" target="_blank">
             <i class="fa-brands fa-github fa-xl" style="color: black"></i>
           </a>
-          <a href="https://www.instagram.com/anurfherder/">
+          <a href="https://www.instagram.com/anurfherder/" target="_blank">
             <i class="fa-brands fa-instagram fa-xl" style="color: #ffb5b5"></i>
           </a>
         </div>
