fixed typo and changed font size

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <p>
                 My portfolio is the result of countless hours of work and
                 dedication. It is also an open invitation to connect,
-                collaborate, and journey through the endliss possibilities of
+                collaborate, and journey through the endless possibilities of
                 the digital universe together. Thank you for choosing to play
                 alongside me, and let's create some extraordinary online
                 experiences together!
