updated project bios

--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
                 /></a>
               </div>
               <h3 class="text-center">Book Site</h3>
-              <p class="text-center">Completed with responsive HTML and CSS.</p>
+              <p class="text-center">
+                Completed with responsive HTML, CSS and Youtube embed.
+              </p>
             </div>
             <div>
               <div class="blob-back-3">
@@ -105,7 +107,7 @@
               </div>
               <h3 class="text-center">Clock App</h3>
               <p class="text-center">
-                Utilizes HTML, CSS, JS, API and Bootstrap.
+                Utilizes HTML, CSS, JS, API and Bootstrap. (not responsive)
               </p>
             </div>
             <div>
@@ -119,7 +121,7 @@
               </div>
               <h3 class="text-center">Weather App</h3>
               <p class="text-center">
-                Utilizes HTML, CSS, JS, API and Bootstrap.
+                Utilizes HTML, CSS, JS, API and Bootstrap. (not responsive)
               </p>
             </div>
             <div></div>
