updated for darker theme and new photo

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 experiences together!
               </p>
             </div>
-            <div><img src="/images/selfie.png" class="bio-img" /></div>
+            <div><img src="/images/coffee.jpg" class="bio-img" /></div>
           </div>
         </section>
         <section id="projects">
