added new project + skill

--- a/index.html
+++ b/index.html
@@ -70,6 +70,20 @@
           <h2>Projects</h2>
           <div class="grid grid-4-columns grid-space projects">
             <div>
+              <div class="blob-back-5">
+                <a
+                  href="https://www.shecodes.io/cohorts/shecodes-plus-01d9d808-0686-415f-9eb3-1b582620f0d8/projects/1716174"
+                  target="_blank"
+                >
+                  <img src="/images/darcy.PNG" class="blob-5"
+                /></a>
+              </div>
+              <h3 class="text-center">Weather App</h3>
+              <p class="text-center">
+                Utilizes HTML, CSS, JS, API and AI. (not responsive)
+              </p>
+            </div>
+            <div>
               <div class="blob-back-1">
                 <a
                   href="https://seogwipo-southkorea.netlify.app/"
@@ -124,7 +138,7 @@
                 Utilizes HTML, CSS, JS, API and Bootstrap. (not responsive)
               </p>
             </div>
-            <div></div>
+
             <div></div>
           </div>
         </section>
@@ -186,6 +200,7 @@
                 <li>Flexbox</li>
                 <li>SEO</li>
                 <li>Responsive</li>
+                <li>AI</li>
               </ul>
             </div>
             <div><img src="/images/185635.png" class="shecodes-img" /></div>
