Updated Project info + link

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
             <div>
               <div class="blob-back-5">
                 <a
-                  href="https://www.shecodes.io/cohorts/shecodes-plus-01d9d808-0686-415f-9eb3-1b582620f0d8/projects/1716174"
+                  href="https://www.shecodes.io/cohorts/shecodes-ai-add-on-4c067c58-ec27-416d-8419-6b6291c4fee1/projects/2035379"
                   target="_blank"
                 >
                   <img src="/images/darcy.PNG" class="blob-5"
                 /></a>
               </div>
-              <h3 class="text-center">Weather App</h3>
+              <h3 class="text-center">Darcy AI</h3>
               <p class="text-center">
                 Utilizes HTML, CSS, JS, API and AI. (not responsive)
               </p>
