--- a/index.html
+++ b/index.html
@@ -79,9 +79,7 @@
                 /></a>
               </div>
               <h3 class="text-center">Darcy AI</h3>
-              <p class="text-center">
-                Utilizes HTML, CSS, JS, API and AI. (not responsive)
-              </p>
+              <p class="text-center">Utilizes HTML, CSS, JS, API and AI.</p>
             </div>
             <div>
               <div class="blob-back-1">
