added new project

--- a/index.html
+++ b/index.html
@@ -70,6 +70,17 @@
           <h2>Projects</h2>
           <div class="grid grid-4-columns grid-space projects">
             <div>
+              <div class="blob-back-3">
+                <a href="https://bonusbook.netlify.app/" target="_blank">
+                  <img src="/images/bonus.PNG" class="blob-3"
+                /></a>
+              </div>
+              <h3 class="text-center">TV Show site</h3>
+              <p class="text-center">
+                Created with HTML, CSS, JS, and Spotify embed.
+              </p>
+            </div>
+            <div>
               <div class="blob-back-5">
                 <a
                   href="https://www.shecodes.io/cohorts/shecodes-ai-add-on-4c067c58-ec27-416d-8419-6b6291c4fee1/projects/2035379"
