--- a/index.html
+++ b/index.html
@@ -82,10 +82,7 @@
             </div>
             <div>
               <div class="blob-back-5">
-                <a
-                  href="https://www.shecodes.io/cohorts/shecodes-ai-add-on-4c067c58-ec27-416d-8419-6b6291c4fee1/projects/2035379"
-                  target="_blank"
-                >
+                <a href="https://darcyai.netlify.app/" target="_blank">
                   <img src="/images/darcy.PNG" class="blob-5"
                 /></a>
               </div>
