updated github link

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     class="fa-brands fa-linkedin fa-xl"
                     style="color: #79c2d0"
                   ></i></a
-                ><a href="https://github.com/ANurfHerder" target="_blank"
+                ><a href="https://github.com/brooklynvb" target="_blank"
                   ><i
                     class="fa-brands fa-github fa-xl"
                     style="color: black"
@@ -223,7 +223,7 @@
           >
             <i class="fa-brands fa-linkedin fa-xl" style="color: #79c2d0"></i>
           </a>
-          <a href="https://github.com/ANurfHerder" target="_blank">
+          <a href="https://github.com/brooklynvb" target="_blank">
             <i class="fa-brands fa-github fa-xl" style="color: black"></i>
           </a>
           <a href="https://www.instagram.com/anurfherder/" target="_blank">
@@ -243,7 +243,7 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
       var typed = new Typed(".auto-type", {
-        strings: ["Web Developer", "Golfer", "Game Developer"],
+        strings: ["Web Developer", "Content Creator", "Game Developer"],
         typeSpeed: 150,
         backSpeed: 150,
         loop: true,
