updated insta links + created download btn for resume pdf

--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
                 alongside me, and let's create some extraordinary online
                 experiences together!
               </p>
+              <button class="header-btn download-btn">
+                <a href="vanbebber_resume.pdf" download="vanbebber_resume"
+                  >Download my Resume</a
+                >
+              </button>
             </div>
             <div><img src="/images/coffee.jpg" class="bio-img" /></div>
           </div>
@@ -166,7 +171,7 @@
                     style="color: black"
                   ></i></a
                 ><a
-                  href="https://www.instagram.com/anurfherder/"
+                  href="https://www.instagram.com/brook.vans/"
                   target="_blank"
                 >
                   <i
@@ -226,7 +231,7 @@
           <a href="https://github.com/brooklynvb" target="_blank">
             <i class="fa-brands fa-github fa-xl" style="color: black"></i>
           </a>
-          <a href="https://www.instagram.com/anurfherder/" target="_blank">
+          <a href="https://www.instagram.com/brook.vans/" target="_blank">
             <i class="fa-brands fa-instagram fa-xl" style="color: #ffb5b5"></i>
           </a>
         </div>
