--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@
             <div class="bio">
               <p>
                 Greetings and welcome to my portfolio site! As an avid gamer I
-                have honed my skills in the virtual realms; now I am channeling
-                that passion into crafting code and design that is not only
-                visually appealing but user-friendly. In the realm of web
-                development, just as in gaming, the mission is the same: strike
-                the perfect balance between aesthetics and user experience.
+                have honed my skills in the virtual realms and as a devoted
+                golfer I have hardened my skills in the physical. Now I am
+                channeling that passion into crafting code and design that is
+                not only visually appealing but user-friendly. In the realm of
+                web development, just as in gaming, the mission is the same:
+                strike the perfect balance between aesthetics and user
+                experience.
               </p>
 
               <p>
@@ -64,7 +66,7 @@
               </p>
               <button class="header-btn download-btn">
                 <a
-                  href="resume_BrooklynVanBebber.pdf"
+                  href="VanBebber_Brooklyn_resume.pdf"
                   download="vanbebber_resume"
                   >Download my Resume</a
                 >
