--- a/index.html
+++ b/index.html
@@ -68,11 +68,18 @@
                 <a
                   href="VanBebber_Brooklyn_resume.pdf"
                   download="vanbebber_resume"
+                  alt="click to download resume PDF."
                   >Download my Resume</a
                 >
               </button>
             </div>
-            <div><img src="/images/coffee.jpg" class="bio-img" /></div>
+            <div>
+              <img
+                src="/images/coffee.jpg"
+                class="bio-img"
+                alt="Brooklyn smiling while holding coffee."
+              />
+            </div>
           </div>
         </section>
         <section id="projects">
@@ -81,7 +88,10 @@
             <div>
               <div class="blob-back-3">
                 <a href="https://bonusbook.netlify.app/" target="_blank">
-                  <img src="/images/bonus.PNG" class="blob-3"
+                  <img
+                    src="/images/bonus.PNG"
+                    class="blob-3"
+                    alt="TV show webpage."
                 /></a>
               </div>
               <h3 class="text-center">TV Show site</h3>
@@ -92,7 +102,7 @@
             <div>
               <div class="blob-back-5">
                 <a href="https://darcyai.netlify.app/" target="_blank">
-                  <img src="/images/darcy.PNG" class="blob-5"
+                  <img src="/images/darcy.PNG" class="blob-5" alt="Ai webpage."
                 /></a>
               </div>
               <h3 class="text-center">Darcy AI</h3>
@@ -103,7 +113,10 @@
                 <a
                   href="https://seogwipo-southkorea.netlify.app/"
                   target="_blank"
-                  ><img src="/images/trip-pic.PNG" class="blob-1"
+                  ><img
+                    src="/images/trip-pic.PNG"
+                    class="blob-1"
+                    alt="Travel webpage."
                 /></a>
               </div>
               <h3 class="text-center">Travel Site</h3>
@@ -117,7 +130,7 @@
                   href="https://racing-in-the-rain.netlify.app/"
                   target="_blank"
                 >
-                  <img src="/images/dog.PNG" class="blob-2"
+                  <img src="/images/dog.PNG" class="blob-2" alt="Book webpage."
                 /></a>
               </div>
               <h3 class="text-center">Book Site</h3>
@@ -131,7 +144,10 @@
                   href="https://www.shecodes.io/cohorts/shecodes-plus-add-on-28caceae-ab04-4d5b-b969-238bf796394b/projects/1784095"
                   target="_blank"
                 >
-                  <img src="/images/clock.PNG" class="blob-3"
+                  <img
+                    src="/images/clock.PNG"
+                    class="blob-3"
+                    alt="Clock webpage."
                 /></a>
               </div>
               <h3 class="text-center">Clock App</h3>
@@ -145,7 +161,10 @@
                   href="https://www.shecodes.io/cohorts/shecodes-plus-01d9d808-0686-415f-9eb3-1b582620f0d8/projects/1716174"
                   target="_blank"
                 >
-                  <img src="/images/weather.PNG" class="blob-4"
+                  <img
+                    src="/images/weather.PNG"
+                    class="blob-4"
+                    alt="Weather webpage."
                 /></a>
               </div>
               <h3 class="text-center">Weather App</h3>
