--- a/index.html
+++ b/index.html
@@ -24,301 +24,13 @@
     />
     <link rel="stylesheet" href="styles/index.css" />
 
-    <script
-      src="https://kit.fontawesome.com/e78298b102.js"
-      crossorigin="anonymous"
-    ></script>
+    
   </head>
   <body>
     <div class="container">
       <header class="text-center">
-        <h1>Hello I'm Brooklyn</h1>
-        <h1>
-          a
-          <span class="auto-type"></span>
-        </h1>
-        <button class="header-btn"><a href="#contact">Contact Me</a></button>
-      </header>
-
-      <main>
-        <section id="about">
-          <h2>About Me</h2>
-          <div class="grid grid-2-columns">
-            <div class="bio">
-              <p>
-                Greetings and welcome to my portfolio site! As an avid gamer I
-                have honed my skills in the virtual realms and as a devoted
-                golfer I have hardened my skills in the physical. Now I am
-                channeling that passion into crafting code and design that is
-                not only visually appealing but user-friendly. In the realm of
-                web development, just as in gaming, the mission is the same:
-                strike the perfect balance between aesthetics and user
-                experience.
-              </p>
-
-              <p>
-                My portfolio is the result of countless hours of work and
-                dedication. It is also an open invitation to connect,
-                collaborate, and journey through the endless possibilities of
-                the digital universe together. Thank you for choosing to play
-                alongside me, and let's create some extraordinary online
-                experiences together!
-              </p>
-              <button class="header-btn download-btn">
-                <a
-                  href="VanBebber_Brooklyn_resume.pdf"
-                  download="vanbebber_resume"
-                  alt="click to download resume PDF."
-                  >Download my Resume</a
-                >
-              </button>
-            </div>
-            <div>
-              <img
-                src="/images/coffee.jpg"
-                class="bio-img"
-                alt="Brooklyn smiling while holding coffee."
-              />
-            </div>
-          </div>
-        </section>
-        <section id="projects">
-          <h2>Projects</h2>
-          <div class="grid grid-4-columns grid-space projects">
-            <div>
-              <div class="blob-back-3">
-                <a href="https://bonusbook.netlify.app/" target="_blank">
-                  <img
-                    src="/images/bonus.PNG"
-                    class="blob-3"
-                    alt="TV show webpage."
-                /></a>
-              </div>
-              <h3 class="text-center">TV Show site</h3>
-              <p class="text-center">
-                Created with HTML, CSS, JS, and Spotify embed.
-              </p>
-            </div>
-            <div>
-              <div class="blob-back-5">
-                <a href="https://darcyai.netlify.app/" target="_blank">
-                  <img src="/images/darcy.PNG" class="blob-5" alt="Ai webpage."
-                /></a>
-              </div>
-              <h3 class="text-center">Darcy AI</h3>
-              <p class="text-center">Utilizes HTML, CSS, JS, API and AI.</p>
-            </div>
-            <div>
-              <div class="blob-back-1">
-                <a
-                  href="https://seogwipo-southkorea.netlify.app/"
-                  target="_blank"
-                  ><img
-                    src="/images/trip-pic.PNG"
-                    class="blob-1"
-                    alt="Travel webpage."
-                /></a>
-              </div>
-              <h3 class="text-center">Travel Site</h3>
-              <p class="text-center">
-                Completed with responsive HTML, CSS, and utilizes Google embeds.
-              </p>
-            </div>
-            <div>
-              <div class="blob-back-2">
-                <a
-                  href="https://racing-in-the-rain.netlify.app/"
-                  target="_blank"
-                >
-                  <img src="/images/dog.PNG" class="blob-2" alt="Book webpage."
-                /></a>
-              </div>
-              <h3 class="text-center">Book Site</h3>
-              <p class="text-center">
-                Completed with responsive HTML, CSS and Youtube embed.
-              </p>
-            </div>
-            <div>
-              <div class="blob-back-3">
-                <a
-                  href="https://www.shecodes.io/cohorts/shecodes-plus-add-on-28caceae-ab04-4d5b-b969-238bf796394b/projects/1784095"
-                  target="_blank"
-                >
-                  <img
-                    src="/images/clock.PNG"
-                    class="blob-3"
-                    alt="Clock webpage."
-                /></a>
-              </div>
-              <h3 class="text-center">Clock App</h3>
-              <p class="text-center">
-                Utilizes HTML, CSS, JS, API and Bootstrap. (not responsive)
-              </p>
-            </div>
-            <div>
-              <div class="blob-back-4">
-                <a
-                  href="https://www.shecodes.io/cohorts/shecodes-plus-01d9d808-0686-415f-9eb3-1b582620f0d8/projects/1716174"
-                  target="_blank"
-                >
-                  <img
-                    src="/images/weather.PNG"
-                    class="blob-4"
-                    alt="Weather webpage."
-                /></a>
-              </div>
-              <h3 class="text-center">Weather App</h3>
-              <p class="text-center">
-                Utilizes HTML, CSS, JS, API and Bootstrap. (not responsive)
-              </p>
-            </div>
-
-            <div></div>
-          </div>
-        </section>
-        <section id="contact">
-          <div class="grid grid-2-columns contact">
-            <div>
-              <h4 class="text-center">Contact Me</h4>
-              <span class="icons"
-                ><a
-                  href="https://www.linkedin.com/in/brooklyn-van-bebber-6bb8a9242/"
-                  target="_blank"
-                  ><i
-                    class="fa-brands fa-linkedin fa-xl"
-                    style="color: #79c2d0"
-                  ></i></a
-                ><a href="https://github.com/brooklynvb" target="_blank"
-                  ><i
-                    class="fa-brands fa-github fa-xl"
-                    style="color: black"
-                  ></i></a
-                ><a
-                  href="https://www.instagram.com/brook.vans/"
-                  target="_blank"
-                >
-                  <i
-                    class="fa-brands fa-instagram fa-xl"
-                    style="color: #ffb5b5"
-                  ></i></a
-              ></span>
-            </div>
-            <div>
-              <button class="contact-btn">
-                <a href="mailto:bevanbebber@gmail.com">Email me</a>
-              </button>
-            </div>
-          </div>
-        </section>
-        <section>
-          <h2>Certification</h2>
-          <div class="grid grid-2-columns">
-            <div class="shecodes">
-              <p>
-                Through the SheCodes program I have been working to obtain my
-                Front-end Developer certificate. Currently I have completed the
-                Advanced Responsive Development and am enroled in the REACT. I
-                am excited to continue my education and look foreward to
-                finishing before the end of the year.
-              </p>
-              <p>Through this process I have gained experience with:</p>
-              <ul class="grid grid-2-columns exp">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JS</li>
-                <li>VSCode</li>
-                <li>API</li>
-                <li>Github</li>
-                <li>Hosting</li>
-                <li>Bootstrap</li>
-                <li>Flexbox</li>
-                <li>SEO</li>
-                <li>Responsive</li>
-                <li>AI</li>
-              </ul>
-            </div>
-            <div><img src="/images/185635.png" class="shecodes-img" /></div>
-          </div>
-        </section>
-      </main>
-    </div>
-    <footer>
-      <div class="grid grid-1-column">
-        <div class="footer-icons">
-          <a
-            href="https://www.linkedin.com/in/brooklyn-van-bebber-6bb8a9242/"
-            target="_blank"
-          >
-            <i class="fa-brands fa-linkedin fa-xl" style="color: #79c2d0"></i>
-          </a>
-          <a href="https://github.com/brooklynvb" target="_blank">
-            <i class="fa-brands fa-github fa-xl" style="color: black"></i>
-          </a>
-          <a href="https://www.instagram.com/brook.vans/" target="_blank">
-            <i class="fa-brands fa-instagram fa-xl" style="color: #ffb5b5"></i>
-          </a>
-        </div>
-        <div class="footer-nav grid grid-3-columns">
-          <div><a href="#about">About</a></div>
-          <div><a href="#projects">Projects</a></div>
-          <div><a href="#contact">Contact</a></div>
-        </div>
-      </div>
-    </footer>
-    <div class="footer-bottom">
-      <p class="name">This website was coded by Brooklyn Van Bebber</p>
-    </div>
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-    <script>
-      var typed = new Typed(".auto-type", {
-        strings: ["Web Developer", "Content Creator", "Game Developer"],
-        typeSpeed: 150,
-        backSpeed: 150,
-        loop: true,
-      });
-
-      // Some random colors
-      const colors = ["#f76b8a", "#66bfbf", "#1B1B1B", "#eaf6f6", "#fdffcd"];
-
-      const numBalls = 100;
-      const balls = [];
-
-      for (let i = 0; i < numBalls; i++) {
-        let ball = document.createElement("div");
-        ball.classList.add("ball");
-        ball.style.background =
-          colors[Math.floor(Math.random() * colors.length)];
-        ball.style.left = `${Math.floor(Math.random() * 90)}vw`;
-        ball.style.top = `${Math.floor(Math.random() * 250)}vh`;
-        ball.style.transform = `scale(${Math.random()})`;
-        ball.style.width = `${Math.random()}em`;
-        ball.style.height = ball.style.width;
-
-        balls.push(ball);
-        document.body.append(ball);
-      }
-
-      // Keyframes
-      balls.forEach((el, i, ra) => {
-        let to = {
-          x: Math.random() * (i % 5 === 3 ? -11 : 11),
-          y: Math.random() * 12,
-        };
-
-        let anim = el.animate(
-          [
-            { transform: "translate(0, 0)" },
-            { transform: `translate(${to.x}rem, ${to.y}rem)` },
-          ],
-          {
-            duration: (Math.random() + 1) * 6000, // random duration
-            direction: "alternate",
-            fill: "both",
-            iterations: Infinity,
-            easing: "ease-in-out",
-          }
-        );
-      });
-    </script>
+        <h1>Currently Under Maintenance</h1>
+        <p class="emoji">🛠️</p>
+        
   </body>
 </html>
