--- a/index.html
+++ b/index.html
@@ -212,7 +212,9 @@
     <div class="animate-fade-in">
      <div class="inline-block mb-6">
       <div class="w-32 h-32 mx-auto rounded-full flex items-center justify-center text-6xl shadow-lg" style="background: linear-gradient(135deg, #fecdd3, #fef08a);">
-       👩‍💻
+       <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/178/545/original/Headshot_Main.png?1771549271"
+       style="border-radius: 50%; padding: 
+       5px">
       </div>
      </div>
      <h1 class="text-5xl md:text-6xl font-extrabold mb-4" style="color: #9f1239;">Hey, I'm <span style="color: #be185d;">Brooklyn</span></h1>
