--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/178/541/origina
               Resources
             </h2>
             <p class="font-accent text-xl" style="color: #f472b6">
-              Free goodies for fellow creators
+              Free goodies for fellow creators & Resources for possible partnerships
             </p>
           </div>
           <div class="grid md:grid-cols-2 gap-6">
@@ -435,17 +435,19 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/178/541/origina
                   >Link</span
                 >
                 <h3 class="font-bold text-lg mb-1" style="color: #9f1239">
-                  Amazon Storefront
+                  WCAG Compliance Resource Page
                 </h3>
                 <p class="text-sm mb-3" style="color: #be185d">
-                  All things cute and useful for aesthetic content creation!
+                  Take a look at a resource page I created for ACPSD to help staff and students create content that is compliant with WCAG 2.1 AA
+                  standards. This page include tips and how-tos tailored to the CMS used by ACPSD.
                 </p>
-                <button
+                <a href="https://www.acpsd.net/page/ada-compliance"><button
                   class="px-4 py-2 rounded-full font-semibold text-sm transition-all hover:shadow-md"
                   style="background: #d9f99d; color: #3f6212"
+                
                 >
-                  Get Free →
-                </button>
+                  Learn More →
+                </button></a>
               </div>
             </article>
             <!-- Resource Card 3 -->
@@ -466,7 +468,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/178/541/origina
                   >PDF</span
                 >
                 <h3 class="font-bold text-lg mb-1" style="color: #9f1239">
-                  Accessibility Checklist
+                  Accessibility Checklist (Coming Soon!)
                 </h3>
                 <p class="text-sm mb-3" style="color: #be185d">
                   From Webpages to PDFs this checklist will walk through the
@@ -476,7 +478,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/178/541/origina
                   class="px-4 py-2 rounded-full font-semibold text-sm transition-all hover:shadow-md"
                   style="background: #c4b5fd; color: #5b21b6"
                 >
-                  Duplicate →
+                  Check Back Soon! →
                 </button>
               </div>
             </article>
@@ -492,22 +494,19 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/178/541/origina
                 ⚡
               </div>
               <div>
-                <span
-                  class="inline-block px-2 py-1 rounded-full text-xs font-bold mb-2"
-                  style="background: #d9f99d; color: #3f6212"
-                  >Code</span
-                >
+                <span class="inline-block px-2 py-1 rounded-full text-xs font-bold mb-2"
+                  style="background: #c4b5fd; color: #5b21b6">Link</span>
                 <h3 class="font-bold text-lg mb-1" style="color: #9f1239">
-                  Starter Templates
+                  Ammazon Storefront (Coming Soon!)
                 </h3>
                 <p class="text-sm mb-3" style="color: #be185d">
-                  Jump-start your projects with these boilerplate codes.
+                  All things cute and useful for aesthetic content creation!
                 </p>
                 <button
                   class="px-4 py-2 rounded-full font-semibold text-sm transition-all hover:shadow-md"
                   style="background: #fef08a; color: #854d0e"
                 >
-                  Browse All →
+                  Check Back Soon! →
                 </button>
               </div>
             </article>
@@ -526,7 +525,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/178/541/origina
             Videos
           </h2>
           <p class="font-accent text-xl" style="color: #f472b6">
-            Tutorials &amp; behind the scenes
+            Professional &amp; Personal Videos I've Made
           </p>
         </div>
         <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
