--- a/index.html
+++ b/index.html
@@ -409,12 +409,12 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/178/541/origina
                   Check out my resume and please feel free to reach out to me
                   regarding work opportunities or for making connections!
                 </p>
-                <button
+                <a href="" download="brooklyn.vanbebber.pdf"><button
                   class="px-4 py-2 rounded-full font-semibold text-sm transition-all hover:shadow-md"
                   style="background: #fecdd3; color: #9f1239"
                 >
                   Download ↓
-                </button>
+                </button></a>
               </div>
             </article>
             <!-- Resource Card 2 -->
