--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/178/543/origina
               letters to Darcy from Pride and Prejudice and receive replies!
             </p>
             <a
-              href="https://www.shecodes.io/projects/2035379"
+              href="https://www.shecodes.io/projects/2035379" target="_blank" rel="noopener noreferrer"
               class="inline-flex items-center gap-2 font-semibold text-sm transition-colors"
               style="color: #db2777"
               onmouseover="this.style.color = '#be185d'"
@@ -304,7 +304,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/178/542/origina
               exciting website for vacations.
             </p>
             <a
-              href="https://www.shecodes.io/projects/1940143"
+              href="https://www.shecodes.io/projects/1940143" target="_blank" rel="noopener noreferrer"
               class="inline-flex items-center gap-2 font-semibold text-sm transition-colors"
               style="color: #db2777"
               onmouseover="this.style.color = '#be185d'"
@@ -346,7 +346,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/178/541/origina
               create a retro clock where you can change the cities shown.
             </p>
             <a
-              href="https://www.shecodes.io/projects/1784095"
+              href="https://www.shecodes.io/projects/1784095" target="_blank" rel="noopener noreferrer"
               class="inline-flex items-center gap-2 font-semibold text-sm transition-colors"
               style="color: #db2777"
               onmouseover="this.style.color = '#be185d'"
@@ -409,7 +409,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/178/541/origina
                   Check out my resume and please feel free to reach out to me
                   regarding work opportunities or for making connections!
                 </p>
-                <a href="" download="brooklyn.vanbebber.pdf"><button
+                <a href="" download="brooklyn.vanbebber.pdf" target="_blank" rel="noopener noreferrer"><button
                   class="px-4 py-2 rounded-full font-semibold text-sm transition-all hover:shadow-md"
                   style="background: #fecdd3; color: #9f1239"
                 >
@@ -441,7 +441,7 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/178/541/origina
                   Take a look at a resource page I created for ACPSD to help staff and students create content that is compliant with WCAG 2.1 AA
                   standards. This page include tips and how-tos tailored to the CMS used by ACPSD.
                 </p>
-                <a href="https://www.acpsd.net/page/ada-compliance"><button
+                <a href="https://www.acpsd.net/page/ada-compliance" target="_blank" rel="noopener noreferrer"><button
                   class="px-4 py-2 rounded-full font-semibold text-sm transition-all hover:shadow-md"
                   style="background: #d9f99d; color: #3f6212"
                 
@@ -648,32 +648,28 @@ https://s3.amazonaws.com/shecodesio-production/uploads/files/000/178/541/origina
         <div class="max-w-6xl mx-auto px-6">
           <div class="flex justify-center gap-4 mb-6">
             <a
-              href="#"
+              href="https://www.shecodes.io/graduates/75301-brooklyn-van-bebber"
               class="w-12 h-12 rounded-full flex items-center justify-center text-xl transition-all hover:scale-110 hover:shadow-md"
+              target="_blank" rel="noopener noreferrer"
               style="background: white"
               aria-label="GitHub"
             >
-              🐙
+              👩‍💻
             </a>
             <a
-              href="#"
+              href="https://www.linkedin.com/in/brooklyn-van-bebber/"
               class="w-12 h-12 rounded-full flex items-center justify-center text-xl transition-all hover:scale-110 hover:shadow-md"
+              target="_blank" rel="noopener noreferrer"
               style="background: white"
               aria-label="Twitter"
             >
-              🐦
+              💼
             </a>
+            
             <a
-              href="#"
+              href="mailto:bevanbebber@gmail.com"
               class="w-12 h-12 rounded-full flex items-center justify-center text-xl transition-all hover:scale-110 hover:shadow-md"
-              style="background: white"
-              aria-label="YouTube"
-            >
-              📺
-            </a>
-            <a
-              href="#"
-              class="w-12 h-12 rounded-full flex items-center justify-center text-xl transition-all hover:scale-110 hover:shadow-md"
+              target="_blank" rel="noopener noreferrer"
               style="background: white"
               aria-label="Email"
             >
